concluindo o dataService com as funções do crud
Funções adicionadas e testadas